Fixado rodape da sidebar e ajustes  visuais no menu

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,6 +12,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     {% if page.toc_footers %}
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">{% t global.complementary %}</h2>
@@ -36,5 +37,6 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
