--- a/en/assets/css/custom.css
+++ b/en/assets/css/custom.css
@@ -454,13 +454,12 @@ header.logo img {
 
 header.logo {
     background: #fff;
-    box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-    border: none;
+    border-bottom: 1px solid #dddddd;
 }
 
 .post-list {
@@ -1292,6 +1291,85 @@ ul.tocify-header > ul.tocify-subheader > ul.tocify-subheader > ul.tocify-subhead
 }
 
 /* Menu Items */
+
+/* New Home */
+
+.home-header-container {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 0 30px;
+}
+
+@media(max-width: 600px) {
+    .home-header-container {
+    flex-flow: column;
+    }
+}
+
+.home-header-container a.help {
+    border: none;
+}
+
+.home-header-container input#input-search {
+    width: 200px;
+}
+
+.home ul.product-list {
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 30px;
+    margin-top: 60px;
+    justify-content: space-between;
+}
+
+.home li.product {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 60px;
+}
+
+.home ul h2 {
+    margin-top: 0;
+    text-align: center;
+    font-weight: normal;
+    margin-bottom: 10px;
+}
+
+.home ul.doc {
+    list-style: none;
+    padding: 20px;
+    border: 1px solid #dddddd;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+.home-footer {
+    border-top: 1px solid #dddddd;
+}
+
+.home-footer .footer-conteudo {
+    max-width: 1000px;
+    margin: 0 auto;
+    border: none;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+}
+
+/* New Home */
 
 
 /* Queries */
