Organiza ordem de comportamentos

--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -170,18 +170,12 @@
         <script>
         let langs = '';
 
+        $('div.highlighter-rouge').prepend( '<a class="expand-btn"><i class=fa fa-arrows-alt aria-hidden=true></i>{% t global.toggle %}</a>' );
         $('div.highlighter-rouge').each(function (index) {
             if(!$(this).parent().hasClass('language-group')) {
                 $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
             }
         });
-
-        {% for lang in page.language_tabs %}
-        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
-        {% endfor %}
-
-        $('.language-group .highlighter-rouge').prepend( '<a class="expand-btn"><i class=fa fa-arrows-alt aria-hidden=true></i>{% t global.toggle %}</a>' );
-        $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
 
         $('.hide-btn').click(function() {
             $('.content-container').toggleClass('no-dark-box');
@@ -195,6 +189,12 @@
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
         });
+
+        {% for lang in page.language_tabs %}
+        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
+        {% endfor %}
+
+        $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
         </script>
 
         <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
