--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -134,7 +134,10 @@
                 selectors: "h1,h2,h3,h4,h5,h6",
                 {% endif %}
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
