Adição de ícones para comutação do código e coluna lateral

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="sidebar-sticky">
     <div class="sidebar-about">
-      <a title="{% t global.toggle %} {% t global.sidebar %}" class="hamburger">
+      <a title="{% t global.toggle_left %} {% t global.sidebar %}" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
       <a href="{{ site.baseurl }}/">
