--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -6,7 +6,7 @@
         <div class="content-container">
             <div class="language-tabs">
                 <a class="code-menu"><i class="fa fa-code code-hamb" aria-hidden="true"></i></a>
-                <a class='hide-btn' id="hide-button"><i class="fa fa-chevron-left" aria-hidden="true"></i>{% t global.toggle %}</a>
+                <a class='hide-btn' id="hide-button" title="{% t global.toggle_right %}"><i class="fa fa-bars" aria-hidden="true"></i></a>
             </div>
             <div class="dark-box"></div>
         {% else %}
@@ -89,7 +89,7 @@
         {% if page.language_tabs %}
         <div class="content-container">
             <div class="language-tabs">
-                <a class='hide-btn' id="hide-button"><i class="fa fa-chevron-left" aria-hidden="true"></i>{% t global.toggle %}</a>
+                <a class='hide-btn' id="hide-button" title="{% t global.toggle_right %}"><i class="fa fa-bars" aria-hidden="true"></i></a>
                 <ul class="language-buttons">
                     {% for lang in page.language_tabs %}
                     <li><a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a></li>
@@ -173,7 +173,7 @@
         <script>
         let langs = '';
 
-        $('div.highlighter-rouge').prepend( '<a class="expand-btn"><i class=fa fa-arrows-alt aria-hidden=true></i>{% t global.toggle %}</a>' );
+        $('div.highlighter-rouge').prepend( '<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>' );
         $('div.highlighter-rouge').each(function (index) {
             if(!$(this).parent().hasClass('language-group')) {
                 $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
