--- a/en/assets/css/custom.css
+++ b/en/assets/css/custom.css
@@ -153,34 +153,28 @@ td, th {
     position: relative
 }
 
+.search-results {
+    display: none;
+}
+.search-results.visible {
+    display: block;
+    list-style: none;
+    padding: 10px 20px;
+    max-height: 400px;
+    position: absolute;
+    float: right;
+    width: 400px;
+    overflow: auto;
+    border: 1px solid #dadada;
+    border-radius: 0 4px 4px 0;
+    background: #fff;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+    right: calc(25% + 40px);
+}
 
-
-
-.sidebar-sticky .search-results {
-    margin: 0;
-    box-sizing: border-box;
-    height: 0;
-    width: 355px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    transition-property: height margin;
-    transition-duration: 180ms;
-    transition-timing-function: ease-in-out;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent 8px), linear-gradient(to top, rgba(0, 0, 0, 0.2), transparent 8px), linear-gradient(to bottom, #000, transparent 1.5px), linear-gradient(to top, #939393, rgba(147, 147, 147, 0) 1.5px), #303137
+.no-dark-box .search-results.visible {
+    right: 80px;
 }
-.sidebar-sticky .search-results.visible {
-    height: 11rem;
-    margin-bottom: 1em;
-}
-.sidebar-sticky .search-results li {
-    margin: 1em 15px;
-}
-.sidebar-sticky .search-results a {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-.sidebar-sticky .search-results a:hover {
-    text-decoration: underline;
 }
 
 .toc-footer li {
@@ -359,7 +353,7 @@ aside a:hover {
     bottom: 0;
 }
 
-.sidebar-sticky .search-results.visible + .tocify {
+.search-results.visible + .tocify {
     max-height: calc(100vh - 418px - 11rem);
 }
 
