--- a/en/assets/css/custom.css
+++ b/en/assets/css/custom.css
@@ -1544,3 +1544,27 @@ ul.tocify-header > ul.tocify-subheader > ul.tocify-subheader > ul.tocify-subhead
     height: calc(100vh - 115px);
     overflow-y: auto;
 }
+
+#toc a {
+    text-indent: 0;
+}
+
+#toc ul li a {
+    padding-left: 15px !important;
+}
+
+#toc ul ul li a {
+    padding-left: 30px !important;
+}
+
+#toc ul ul ul li a {
+    padding-left: 45px !important;
+}
+
+#toc ul ul ul ul li a {
+    padding-left: 60px !important;
+}
+
+#toc ul ul ul ul ul li a {
+    padding-left: 75px !important;
+}
