Ajuste no link e texto de ajuda

--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -22,7 +22,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="#" class="help">{% t global.support %}</a>
+                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">{% t global.support %}</a>
 
                             {% if page.translated %}
                             <div class="lang">
@@ -91,16 +91,7 @@
 
             {{ content }}
 
-            <div class="footer-conteudo">
-                <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
-                    <img src="{{ site.baseurl }}/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
-                </div>
-
-                <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
-                    <h2>Precisa de ajuda?</h2>
-                    <p>Se você não conseguiu encontrar sua resposta acima, <a href="#">entre em contato conosco</a> ou <a href="#">consulte nosso FAQ.</a></p>
-                </div>
-            </div>
+            {% include footer.html %}
         </div>
 
         {% include sidebar.html %}
