Ajuste nas tabelas próximas ao código

--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -13,11 +13,10 @@
                 </ul>
             </div>
             <div class="dark-box"></div>
+            <div class="overlay"></div>
         {% else %}
         <div class="content-container no-dark-box">
         {% endif %}
-            <div class="overlay"></div>
-
             <div id="submenu">
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
@@ -156,6 +155,12 @@
             if(!$(this).parent().hasClass('language-group')) {
                 $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
             }
+        });
+
+        $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
+            let height = $(this).outerHeight();
+
+            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + height + 'px;"></div> ');
         });
 
         $('.hide-btn').click(function() {
