Ajuste no comportamento dos links de rodapé

--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -90,7 +90,7 @@
 
             {{ content }}
 
-            {% include footer.html %}
+            {% include footer.html tags=post.tags %}
         </div>
 
         {% include sidebar.html %}
