--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,16 +13,32 @@
     <div id="toc"></div>
 
     <div class="fixed-footer">
-    {% if page.toc_footers %}
-    <div class="toc-footer">
-      <h2 class="no-toc toc-footer-title">{% t global.complementary %}</h2>
-      <ul class="toc-footer">
-        {%for link in page.toc_footers  limit:3%}
-        <li>{{ link }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
+        {% if page.toc_footers %}
+        <div class="toc-footer">
+            <h2 class="no-toc toc-footer-title">{% t global.complementary %}</h2>
+            {% for tag in page.tags %}
+                {% if posts %}
+                    {% assign posts = site.tags[tag] | concat: posts %}
+                {% else %}
+                    {% assign posts = site.tags[tag] %}
+                {% endif %}
+            {% endfor %}
+
+            {% assign posts = posts | sort: 'title' | sort: 'sort_order' %}
+            {% assign i = 0 %}
+            {% assign t = 4 %}
+
+            <ul class="toc-footer">
+            {% for post in posts %}
+                {% if post.title != page.title and i < t %}
+                    {% assign i=i | plus:1 %}
+                    <li><a href="{{ site.baseurl }}{{ post.url }}" {% if post.description %}title="{{post.description}}"{% endif %}>{{ post.title }}</a></li>
+                {% endif %}
+            {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+
     <div class="toc-contact">
       <div class="contact">
         <a title="{% t global.contact %}" href="#">
