--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="theme-color" content="#00aeef">
+    <meta http-equiv="Content-Language" content="{{ site.lang }}">
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -31,6 +32,14 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/cielo.css">
 
+    {% for lang in site.languages %}
+        {% if lang == site.default_lang %}
+            <link rel="alternate" hreflang="{{lang}}" href="{{ site.url }}{{page.url}}" />
+        {% else %}
+            <link rel="alternate" hreflang="{{lang}}" href="{{ site.url }}/{{lang}}{{page.url}}" />
+        {% endif %}
+    {% endfor %}
+
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml">
 </head>
