--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -1,206 +1,91 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang }}">
-    {% include head.html %}
-    <body>
-        {% if page.language_tabs %}
-        <div class="content-container">
-            <div class="language-tabs">
-                <a class='hide-btn' id="hide-button" title="{% t global.toggle_right %}"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                <ul class="language-buttons">
-                    {% for lang in page.language_tabs %}
-                    <li><a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="dark-box"></div>
-            <div class="overlay"></div>
-        {% else %}
-        <div class="content-container no-dark-box">
-        {% endif %}
-            <div id="submenu">
-                <div class="submenu-container">
-                    <div class="submenu-row sub-items">
-                        <div class="submenu-itens">
-                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">{% t global.support %}</a>
+/*
+Copyright 2008-2013 Concur Technologies, Inc.
 
-                            {% if page.translated %}
-                            <div class="lang">
-                                <span>{% t global.languages %}</span>
+Licensed under the Apache License, Version 2.0 (the "License"); you may
+not use this file except in compliance with the License. You may obtain
+a copy of the License at
 
-                                {% for lang in site.language_names %}
-                                    {% if lang[0] == site.default_lang %}
-                                    <a href="{{ site.baseurl_root }}{{page.url}}">
-                                    {% else %}
-                                    <a href="{{ site.baseurl_root }}/{{ lang[0] }}{{page.url}}">
-                                    {% endif %}
+  http://www.apache.org/licenses/LICENSE-2.0
 
-                                        <img alt="{{ lang[1] }}" src="{{ site.baseurl }}/assets/images/{{ lang[0] }}.png"/>
-                                    </a>
-                                {% endfor %}
-                            </div>
-                            {% endif %}
-                        </div>
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+License for the specific language governing permissions and limitations
+under the License.
+*/
+(function (global) {
+  var languages = [];
 
-                        {% if page.search %}
-                        <div class="search">
-                            <input type="text" class="search" id="input-search">
-                        </div>
-                    </div>
-                    <div class="submenu-row results">
-                        <div class="search-results-container">
-                            <ul class="search-results"></ul>
-                        </div>
-                    </div>
-                        {% else %}
-                    </div>
-                        {% endif %}
+  global.setupLanguages = setupLanguages;
+  global.activateLanguage = activateLanguage;
 
-                    <div class="submenu-row breads">
-                        <ol class="breadcrumb">
-                            {% if site.lang == site.default_lang %}
-                            <li><a href="/">{% t global.home %}</a></li>
-                            {% else %}
-                            <li><a href="{{ site.baseurl_root }}/{{ site.lang }}/">{% t global.home %}</a></li>
-                            {% endif %}
-                            {% assign crumbs = page.url | split: '/' %}
-                            {% assign crumbs_total = crumbs | size | minus: 1 %}
-                            {% for crumb in crumbs offset: 1 %}
-                                {% if forloop.index == crumbs_total %}
-                                    {% if site.lang == site.default_lang %}
-                                    <li class="active">&gt; <a href="{{ site.baseurl_root }}{{ page.url }}">{{page.title}}</a></li>
-                                    {% else %}
-                                    <li class="active">&gt; <a href="{{ site.baseurl_root }}/{{ site.lang }}{{ page.url }}">{{page.title}}</a></li>
-                                    {% endif %}
-                                {% else %}
-                                    {% assign crumb_limit = forloop.index | plus: 1 %}
-                                    {% capture crumb_url %}{% for c in crumbs limit: crumb_limit %}{{ c | append: '/' }}{% endfor %}{% endcapture %}
-                                    {% capture crumb_with_index %}{{ crumb_url | append: 'index.html' }}{% endcapture %}
-                                    {% capture current_page %}{{ site.baseurl }}{{ page.url }}{% endcapture %}
-                                    {% for p in site.pages %}
-                                        {% if crumb_with_index != current_page and crumb_with_index == p.url %}
-                                            <li>&gt; <a href="{{ crumb_with_index }}">{{ crumb | replace:'-',' ' | capitalize}}</a>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-                            {% endfor %}
-                        </ol>
-                    </div>
-                </div>
-            </div>
+  function activateLanguage(language) {
+    if (!language) return;
+    if (language === "") return;
 
-            {{ content }}
+    $(".language-group:not(.lock) .language-buttons a").removeClass('active');
+    $(".language-group:not(.lock) .language-buttons a[data-language-name='" + language + "']").addClass('active');
+    for (var i=0; i < languages.length; i++) {
+      $(".language-group:not(.lock) .language-" + languages[i]).hide();
+    }
+    $(".language-group:not(.lock) .language-" + language).show();
 
-            {% include footer.html tags=post.tags %}
-        </div>
+    //global.toc.calculateHeights();
 
-        {% include sidebar.html %}
+    // scroll to the new location of the position
+    if ($(window.location.hash).get(0)) {
+      $(window.location.hash).get(0).scrollIntoView(true);
+    }
+  }
 
-        <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/jquery-ui-1.9.1.custom.min.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/bootstrap.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/jquery.tocify.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/prettify.js"></script>
-        <script>
-        $(function() {
-            var openedHeader = null;
+  // if a button is clicked, add the state to the history
+  function pushURL(language) {
+    if (!history) { return; }
+    var hash = window.location.hash;
+    if (hash) {
+      hash = hash.replace(/^#+/, '');
+    }
+    history.pushState({}, '', '?' + language + '#' + hash);
 
-            $("#toc").tocify({
-                {% if page.layout == "faq" %}
-                selectors: "h1",
-                {% else %}
-                selectors: "h1,h2,h3,h4,h5,h6",
-                {% endif %}
-                hashGenerator: "pretty",
-                ignoreSelector: ".no-toc",
-                scrollTo: 100,
-                smoothScroll: false,
-                showEffect: "none"
-            }).data("toc-tocify");
+    // save language as next default
+    localStorage.setItem("language", language);
+  }
 
-            $('ul').prev('li').addClass('has-subitens');
-            $(window).scroll(function () {
-                if ($('li.active').closest('.tocify-header') !== openedHeader) {
-                    $('li.is-open').removeClass('is-open');
+  function setupLanguages(l) {
+    var currentLanguage = l[0];
+    var defaultLanguage = localStorage.getItem("language");
 
-                    openedHeader = $('li.active').closest('.tocify-header');
-                }
+    languages = l;
 
-                openedHeader.find('ul:visible').prev('li').addClass('is-open');
-            });
+    if ((location.search.substr(1) !== "") && (jQuery.inArray(location.search.substr(1), languages)) != -1) {
+      // the language is in the URL, so use that language!
+      activateLanguage(location.search.substr(1));
 
-            $('.hamburger').click(function() {
-                $('body').toggleClass('sidebar-closed');
-            });
+      localStorage.setItem("language", location.search.substr(1));
+    } else if ((defaultLanguage !== null) && (jQuery.inArray(defaultLanguage, languages) != -1)) {
+      // the language was the last selected one saved in localstorage, so use that language!
+      activateLanguage(defaultLanguage);
+    } else {
+      // no language selected, so use the default
+      activateLanguage(languages[0]);
+    }
+  }
 
-            $('.code-menu').click(function() {
-                $('body').toggleClass('code-menu-closed');
-            });
+  // if we click on a language tab, activate that language
+  $(function() {
+    $(".language-group:not(.lock) .language-buttons a").on("click", function() {
+      var language = $(this).data("language-name");
+      var e = new CustomEvent('languagechange', { 'detail': language});
 
-            prettyPrint();
-        });
-        </script>
+      pushURL(language);
+      activateLanguage(language);
 
-        {% if page.search %}
-        <script src="{{ site.baseurl }}/assets/js/jquery.highlight.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/lunr.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/search.js"></script>
-        {% endif %}
+      window.dispatchEvent(e);
 
-        {% if page.language_tabs %}
-        <script>
-        let langs = '';
-
-        $('div.highlighter-rouge').prepend( '<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>' );
-        $('div.highlighter-rouge').each(function (index) {
-            if(!$(this).parent().hasClass('language-group')) {
-                $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
-            }
-        });
-
-        $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
-            let height = $(this).outerHeight();
-
-            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + height + 'px;"></div> ');
-        });
-
-        $('.hide-btn').click(function() {
-            $('.content-container').toggleClass('no-dark-box');
-            $('.dark-box').toggle();
-
-            $('.overlay').removeClass('opened');
-            $('.code-fullscreen').removeClass('opened');
-        });
-
-        $('.expand-btn').click(function() {
-            $('.overlay').toggleClass('opened');
-            $(this).parent().parent().parent().toggleClass('opened');
-            $(this).children('i.fa').toggleClass('fa-compress');
-        });
-
-        {% for lang in page.language_tabs %}
-        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
-        {% endfor %}
-
-        $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
-        </script>
-
-        <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
-        <script>
-            $(function() {
-                setupLanguages([ {% for lang in page.language_tabs %} "{{ lang[0] }}", {% endfor %}]);
-            });
-        </script>
-         <!-- Hotjar Tracking Code for https://developercielo.github.io/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:674586,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-        {% endif %}
-    </body>
-</html>
+      return false;
+    });
+    window.onpopstate = function(event) {
+      activateLanguage(window.location.search.substr(1));
+    };
+  });
+})(window);
