[aca08b22d90f3eea99783ab8073b0c59d4ebbd95]: Remove sidebar spacing
It also add CSS classes to align images on markdown

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -89,6 +89,14 @@ img {
   border: 0;
   -ms-interpolation-mode: bicubic;
 }
+img[align=center] {
+  margin: 0 auto;
+  display: block;
+}
+img[align=right] {
+  margin: 0 0 0 auto;
+  display: block;
+}
 #map_canvas img {
   max-width: none;
 }
