[29e006d6999b3351fb7519755ab18de4ed812b2a]: Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -85,17 +85,10 @@ sub {
 }
 img {
   max-width: 100%;
+  height: auto;
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
-}
-img[align=center] {
-  margin: 0 auto;
-  display: block;
-}
-img[align=right] {
-  margin: 0 0 0 auto;
-  display: block;
 }
 #map_canvas img {
   max-width: none;
