--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -97,6 +97,10 @@ a.sidebar-nav-item:focus {
   font-weight: bold;
 }
 
+.tocify {
+    max-height: calc(100vh - 404px);
+}
+
 .toc-footer-title {
     font-size: 20px;
     padding-left: 45px;
