Use Gulp for front-end stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,19 +19,10 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
 
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <script async src="https://use.fontawesome.com/3ae06f1030.js"></script>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/poole.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/hyde.css">
-
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/jquery.tocify.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/jquery-ui.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/prettify.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/cielo.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/bundles/css/bundle.min.css">
 
     {% for lang in site.languages %}
         {% if lang == site.default_lang %}
