--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -95,176 +95,33 @@
 
         {% include sidebar.html %}
 
-        <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/jquery-ui-1.9.1.custom.min.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/bootstrap.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/jquery.tocify.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/prettify.js"></script>
+        <script src="{{ site.baseurl }}/assets/bundles/js/bundle.min.js"></script>
         <script>
-        $(function() {
-            var openedHeader = null;
-
-            $("#toc").tocify({
-                {% if page.layout == "faq" %}
-                selectors: "h1",
-                {% else %}
-                selectors: "h1,h2,h3,h4,h5,h6",
-                {% endif %}
-                hashGenerator: "pretty",
-                ignoreSelector: ".no-toc",
-                scrollTo: 100,
-                smoothScroll: false,
-                showEffect: "none"
-            }).data("toc-tocify");
-
-            $('ul').prev('li').addClass('has-subitens');
-            
-            $(window).scroll(function () {
-                if ($('li.active').closest('.tocify-header') !== openedHeader) {
-                    $('li.is-open').removeClass('is-open');
-
-                    openedHeader = $('li.active').closest('.tocify-header');
-                }
-
-                openedHeader.find('ul:visible').prev('li').addClass('is-open');
-            });
-
-            $('.hamburger').click(function() {
-                $('body').toggleClass('sidebar-closed');
-            });
-
-            $('.code-menu').click(function() {
-                $('body').toggleClass('code-menu-closed');
-            });
-
-            prettyPrint();
-
-            var first = true;
-
-            function setTocHeight() {
-                var sideAbout = $('.sidebar-about').outerHeight();
-                var fixedFooter = $('.fixed-footer').outerHeight();
-                var footerIconHeight = first ? 14 : 0;
-                
-                $('#toc').css('height', 'calc(100vh - ' + (sideAbout + fixedFooter + footerIconHeight) + 'px)');
-            }
-
-            setTocHeight();
-            first = false;
-
-            $(window).resize(setTocHeight);
-        });
+            {% if page.layout == "faq" %}
+            var selectors = 'h1';
+            {% else %}
+            var selectors = 'h1,h2,h3,h4,h5,h6';
+            {% endif %}
         </script>
 
         {% if page.search %}
-        <script src="{{ site.baseurl }}/assets/js/jquery.highlight.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/lunr.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/search.js"></script>
+        <script src="{{ site.baseurl }}/assets/bundles/js/search.min.js"></script>
         {% endif %}
 
         {% if page.language_tabs %}
         <script>
-        let langs = '';
-        let langsArray = [];
+            let langs = '';
+            let langsArray = [];
 
-        $('div.highlighter-rouge').prepend('<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>');
+            {% for lang in page.language_tabs %}
+            langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
+            langsArray.push('{{ lang[0] }}');
+            {% endfor %}
 
-        $('div.highlighter-rouge').each(function (index) {
-            if(!$(this).parent().hasClass('language-group')) {
-                $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
-            }
-        });
-
-        {% if page.language_tabs %}
-        if ( $(window).width() >= 1660) {
-            $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
-                $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + $(this).outerHeight() + 'px;"></div> ');
-            });
-        }
-        {% endif %}
-
-        $('.expand-btn').click(function() {
-            $('.overlay').toggleClass('opened');
-            $(this).parent().parent().parent().toggleClass('opened');
-            $(this).children('i.fa').toggleClass('fa-compress');
-        });
-
-        {% for lang in page.language_tabs %}
-        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
-        langsArray.push('{{ lang[0] }}');
-        {% endfor %}
-
-        $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
+            var toggleCode = '{% t global.toggle_code %}';
         </script>
 
-        <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
-
-        <script>
-            $(function() {
-                $('.language-buttons').each(function() {
-                    let parent = $(this).parent();
-
-                    parent.addClass('selectable');
-
-                    if(parent.hasClass('language-tabs')) {
-                        parent.attr('data-languages', langsArray.join('*') + '*');
-
-                        return true;
-                    }
-
-                    /**
-                     * @type {string[]} localArray
-                     */
-                    let localArray = JSON.parse(JSON.stringify(langsArray));
-
-                    langsArray.forEach((v) => {
-                        if(parent.find('.language-' + v).length === 0) {
-                            $(this).find('[data-language-name="' + v + '"]').remove();
-                            localArray.splice(localArray.indexOf(v), 1);
-                            
-                            if($(this).children().length === 1) {
-                                parent.removeClass('selectable');
-                                parent.addClass('locked');
-                            }
-                        }
-                    });
-
-                    // Just to separate Java from JavaScript, I have add a * to separate the languages
-                    let attr = localArray.join('*');
-                    attr += '*';
-
-                    $(this).children('[data-language-name=' + localArray[0] + ']').addClass('active');
-
-                    let language = parent.find('.language-' + localArray[0]);
-                    language.addClass('show');
-
-                    if ($(window).width() <= 1660) {
-                        language.show();
-                    }
-
-                    parent.attr('data-languages', attr);
-                });
-
-                window.isOpen = $(window).width() >= 1660;
-
-                setupLanguages(langsArray);
-            });
-
-            $('.hide-btn').click(function() {
-                $('.content-container').toggleClass('no-dark-box');
-                $('.dark-box').toggle();
-
-                $('.overlay').removeClass('opened');
-                $('.code-fullscreen').removeClass('opened');
-
-                window.isOpen = !$('.content-container').hasClass('no-dark-box');
-
-                if(!window.isOpen) {
-                    $('.locked .show').show();
-                    $('.selectable:not([data-languages*="' + window.language + '*"]) .show').show();
-                }
-            });
-        </script>
+        <script src='{{ site.baseurl }}/assets/bundles/js/language_buttons.min.js'></script>
         {% endif %}
 
         {% include hotjar.html %}
